# ntnt-benchmarks

./: .gitignore  README.md  RESULTS.md  append-to-dd.sh  benchmark.sh  generate-report.sh  post.lua  setup-db.sql
actix/: Cargo.toml
actix/src/: main.rs
django/: requirements.txt
express/: app.ts  package-lock.json  package.json  tsconfig.json
fastapi/: app.py  requirements.txt
fastify/: app.js  package-lock.json  package.json
gin/: go.mod  go.sum  main.go
hono-bun/: app.ts  package.json
ntnt/: kv-bench.tnt  server.tnt
rails/: Gemfile
results/: 20260312-095941-summary.md  20260312-095941.json  20260312-100031-summary.md  charts.html  raw-actix-db-run1.txt  raw-actix-db-run2.txt  raw-actix-db-run3.txt  raw-actix-json-body-run1.txt  raw-actix-json-body-run2.txt  raw-actix-json-body-run3.txt  raw-actix-json-run1.txt  raw-actix-json-run2.txt  raw-actix-json-run3.txt  raw-actix-params-run1.txt  raw-actix-params-run2.txt  raw-actix-params-run3.txt  raw-actix-plaintext-run1.txt  raw-actix-plaintext-run2.txt  raw-actix-plaintext-run3.txt  raw-actix-queries-run1.txt  raw-actix-queries-run2.txt  raw-actix-queries-run3.txt  raw-actix-template-run1.txt  raw-actix-template-run2.txt  raw-actix-template-run3.txt  raw-express-db-run1.txt  raw-express-db-run2.txt  raw-express-db-run3.txt  raw-express-json-body-run1.txt  raw-express-json-body-run2.txt  raw-express-json-body-run3.txt  raw-express-json-run1.txt  raw-express-json-run2.txt  raw-express-json-run3.txt  raw-express-params-run1.txt  raw-express-params-run2.txt  raw-express-params-run3.txt  (+93 more)
(+112 files in other folders)
