[package]
name = "actix-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
deadpool-postgres = "0.14"
rand = "0.8"
num_cpus = "1.16"

[profile.release]
opt-level = 3
lto = true
